--- a/style.css
+++ b/style.css
@@ -1,77 +1,72 @@
 html, body {
 	overflow-x: hidden;
-}
-body {
-	text-align: left;
-	font-family: Verdana, sans-serif;
-	color: white;
-	background-color: black;
-	display: flex;
 	margin: 0;
+	padding: 0;
 	height: 100vh;
-}
-#sidebar {
-	position: sticky;
-	background: #444;
-	height: 25%;
-	width: 200px;
-	padding: 20px;
-	transition: transform 0.3s ease-in-out;
-	transform: translateX(0);
-	z-index: 1;
-	flex-shrink: 0;
-}
-#sidebar.collapsed {
-	transform: translateX(100%);
-}
-#sidebar-container {
+	color: white;
+	background-color: #00020a;
+	font-family: Verdana, sans-serif;
 	display: flex;
 	flex-direction: column;
-	height: 100%;
 }
-#sidebarToggle {
+
+#bar {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	position: sticky;
+	top: 0;
+	left: 0;
+	background: #0a2133;
+	width: 100%;
+	height: 35px;
+	padding: 5px 10px;
+	z-index: 10;
+	flex-shrink: 0;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+#bar text,
+#zoomPerc {
 	color: white;
-	background: darkgray;
-	cursor: pointer;
-	position: absolute;
-	top: 0px;
-	right: 240px;
-	width: 50px;
-	height: 50px;
+	font-size: 14px;
 }
+
+#bar input {
+	background: #085e50;
+	padding: 5px;
+	border: none;
+	width: 500px;
+}
+
+#bar input[type="range"] {
+	accent-color: #085e50;
+	width: 200px;
+}
+
+#bar input[type="number"] {
+	color: white;
+	width: 50px;
+	margin-left: 10px;
+}
+
+#imageContainer {
+	flex-grow: 1;
+	text-align: center;
+	overflow: auto;
+}
+
 img {
-	max-width: 100vw;
+	max-width: 100%;
 	max-height: 100vh;
 	display: block;
 	margin: auto;
 	padding-bottom: 5px;
 }
-b {
-	font-size: 24px;
-}
-input {
-	background: darkgray;
-	width: 100%;
-	box-sizing: border-box;
-	margin-top: 10px;
-	padding: 5px;
-}
-#imageContainer {
-	flex-grow: 1;
-	text-align: center;
-	overflow: auto;
-	border: 1px solid grey;
-}
-#pageCounter {
+
+b#pageCounter {
 	position: absolute;
-	top: 10px;
+	top: 5px;
 	left: 10px;
-	color: white;
-}
-#zoomContainer {
-	margin-top: 10px;
-}
-#zoomContainer button {
-	width: 25px;
-	height: 25px;
+	font-size: 18px;
 }
