--- a/style.css
+++ b/style.css
@@ -15,21 +15,9 @@ html, body {
 	align-items: center;
 	gap: 10px;
 	position: sticky;
-	top: 0;
-	left: 0;
 	background: #0a2133;
-	width: 100%;
 	height: 35px;
 	padding: 5px 10px;
-	z-index: 10;
-	flex-shrink: 0;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-}
-
-#bar text,
-#zoomPerc {
-	color: white;
-	font-size: 14px;
 }
 
 #bar input {
@@ -64,9 +52,7 @@ img {
 	padding-bottom: 5px;
 }
 
-b#pageCounter {
-	position: absolute;
-	top: 5px;
-	left: 10px;
-	font-size: 18px;
+#pageCounter {
+	margin-left: auto;
+	white-space: nowrap;
 }
