--- a/style.css
+++ b/style.css
@@ -56,3 +56,22 @@ img {
 	margin-left: auto;
 	white-space: nowrap;
 }
+
+#messageContainer {
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+}
+
+.message {
+	font-size: 32px;
+	text-shadow: 0 0 4px #000;
+}
+
+#loadingMessage {
+	opacity: 0%;
+	transition: opacity 0.5s ease-in-out;
+}
